--- a/tv-script-generation/dlnd_tv_script_generation.ipynb
+++ b/tv-script-generation/dlnd_tv_script_generation.ipynb
@@ -12,10 +12,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -39,11 +37,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset Stats\n",
+      "Roughly the number of unique words: 11492\n",
+      "Number of scenes: 262\n",
+      "Average number of sentences in each scene: 15.248091603053435\n",
+      "Number of lines: 4257\n",
+      "Average number of words in each line: 11.50434578341555\n",
+      "\n",
+      "The sentences 0 to 10:\n",
+      "Moe_Szyslak: (INTO PHONE) Moe's Tavern. Where the elite meet to drink.\n",
+      "Bart_Simpson: Eh, yeah, hello, is Mike there? Last name, Rotch.\n",
+      "Moe_Szyslak: (INTO PHONE) Hold on, I'll check. (TO BARFLIES) Mike Rotch. Mike Rotch. Hey, has anybody seen Mike Rotch, lately?\n",
+      "Moe_Szyslak: (INTO PHONE) Listen you little puke. One of these days I'm gonna catch you, and I'm gonna carve my name on your back with an ice pick.\n",
+      "Moe_Szyslak: What's the matter Homer? You're not your normal effervescent self.\n",
+      "Homer_Simpson: I got my problems, Moe. Give me another one.\n",
+      "Moe_Szyslak: Homer, hey, you should not drink to forget your problems.\n",
+      "Barney_Gumble: Yeah, you should only drink to enhance your social skills.\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "view_sentence_range = (0, 10)\n",
     "\n",
@@ -88,14 +109,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import problem_unittests as tests\n",
+    "# AE: we'll need counter to create unique word list\n",
+    "from collections import Counter\n",
     "\n",
     "def create_lookup_tables(text):\n",
     "    \"\"\"\n",
@@ -103,8 +132,13 @@
     "    :param text: The text of tv scripts split into words\n",
     "    :return: A tuple of dicts (vocab_to_int, int_to_vocab)\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    return None, None\n",
+    "    # AE: Implementation\n",
+    "    unique_words = Counter(text)\n",
+    "    vocab_to_int = dict(zip(unique_words.keys(), range(len(unique_words))))\n",
+    "    int_to_vocab = dict(zip(range(len(unique_words)), unique_words.keys()))\n",
+    "    #print(text[:10])\n",
+    "    #print(len(text), \" \", len(unique_words))\n",
+    "    return (vocab_to_int, int_to_vocab)\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -137,19 +171,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def token_lookup():\n",
     "    \"\"\"\n",
     "    Generate a dict to turn punctuation into a token.\n",
     "    :return: Tokenize dictionary where the key is the punctuation and the value is the token\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    # AE: Implementation\n",
+    "    punctuations = ['.', ',', '\"', ';', '!', '?', '(', ')', '--', '\\n']\n",
+    "    tokens = ['||period||', '||comma||', '||quotation_mark||', '||semicolon||', '||exclamation_mark||', '||question_mark||', '||l_parenthesis||', '||r_parenthesis||', '||double_dash||', '||new_line||']\n",
+    "    return dict(zip(punctuations, tokens))\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -167,10 +209,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -190,10 +230,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -224,11 +262,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TensorFlow Version: 1.3.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.6/site-packages/ipykernel_launcher.py:14: UserWarning: No GPU found. Please use a GPU to train your neural network.\n",
+      "  \n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL\n",
@@ -263,11 +315,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def get_inputs():\n",
     "    \"\"\"\n",
@@ -275,7 +333,10 @@
     "    :return: Tuple (input, targets, learning rate)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None, None, None\n",
+    "    input_ph = tf.placeholder(dtype=tf.int32, shape=[None, None], name='input')\n",
+    "    targets_ph = tf.placeholder(dtype=tf.int32, shape=[None, None], name='targets')\n",
+    "    learning_rate_ph = tf.placeholder(dtype=tf.float32, shape=None, name='learning_rate')\n",
+    "    return (input_ph, targets_ph, learning_rate_ph)\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -299,11 +360,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def get_init_cell(batch_size, rnn_size):\n",
     "    \"\"\"\n",
@@ -312,8 +379,18 @@
     "    :param rnn_size: Size of RNNs\n",
     "    :return: Tuple (cell, initialize state)\n",
     "    \"\"\"\n",
+    "    \n",
+    "    # AE: With the latest TF we can't anymore do: tf.contrib.rnn.MultiRNNCell([lstm_cell] * number_of_cells)\n",
+    "    # AE: That would just create an RNN cell that consists of the same lstm_cell passed in several times.\n",
+    "    # AE: We really need to create separate cells (separate instances) that we pass in that list.\n",
+    "    def makeLSTMCells(how_many):\n",
+    "        return [tf.contrib.rnn.BasicLSTMCell(rnn_size) for i in range(how_many)]\n",
+    "\n",
+    "    lstm_tower = tf.contrib.rnn.MultiRNNCell(makeLSTMCells(2))\n",
     "    # TODO: Implement Function\n",
-    "    return None, None\n",
+    "    initial_state = lstm_tower.zero_state(batch_size, tf.float32)\n",
+    "    initial_state = tf.identity(input=initial_state, name='initial_state')\n",
+    "    return (lstm_tower, initial_state)\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -856,7 +933,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.3"
   },
   "widgets": {
    "state": {},
